test/files/errors/mod0.jg
_main int ()
{
    d int = 0;

    d %= 0; # Error
}